# MLOps_project

./: .env  pyproject.toml  train.py
data/: .~lock.raw_data.csv#
models/: model.pkl
notebooks/: EDA.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb
src/: cerebrium.toml  logger.py  main.py  train.py
src/data/: preprocessing.py
src/models/: hyperparams.py  model_registry_api.py  predict.py
